WP-8037 Fixed the issue of Go button overlapping Date Range

--- a/sass/conditionals/exec-ed/ee-program-finder.sass
+++ b/sass/conditionals/exec-ed/ee-program-finder.sass
@@ -1061,7 +1061,7 @@ h2.isotopify-title
 
   // Topic select.
   .form-item-program-topic
-    left: -290px
+    left: -335px
     position: relative
     +breakpoint(1055px max-width)
       left: 0
@@ -1069,7 +1069,7 @@ h2.isotopify-title
   // Date select.
   .isotopify-filter-daterange
     position: absolute
-    right: 55px
+    right: 110px
     top: 0
     +breakpoint(1055px max-width)
       left: 250px
